panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_va_args.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_va_args.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_va_args.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 4>>`
                        (string `array<char; 4>` "%d\n\0"))))
               (add `int` (1 `int`) (2 `int`))))
         (return
            (combine `int`
               (combine `int`
                  (add `int` (add `int` (add `int` (1 `int`) (2 `int`)) (3 `int`)) (4 `int`))
                  (5 `int`))
               (6 `int`))))))

----- stderr -----
