panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_va_opt_with_empty_varargs_simple.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_va_opt_with_empty_varargs_simple.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_va_opt_with_empty_varargs_simple.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression ∅)
         (expression ∅))))

----- stderr -----
